--- a/static/css/output.css
+++ b/static/css/output.css
@@ -1320,6 +1320,18 @@ input[type="range"]::-ms-fill-lower {
   height: 52px;
 }
 
+.h-auto {
+  height: auto;
+}
+
+.h-\[450px\] {
+  height: 450px;
+}
+
+.h-\[400px\] {
+  height: 400px;
+}
+
 .w-3 {
   width: 0.75rem;
 }
@@ -1390,6 +1402,10 @@ input[type="range"]::-ms-fill-lower {
 
 .max-w-3xl {
   max-width: 48rem;
+}
+
+.max-w-full {
+  max-width: 100%;
 }
 
 .flex-shrink-0 {
@@ -2620,6 +2636,14 @@ input[type="range"]::-ms-fill-lower {
 
   .lg\:grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:px-48 {
