--- a/templates/main_app/landing.html
+++ b/templates/main_app/landing.html
@@ -1,9 +1,17 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block extra_css %}
+    <style type="text/css">
+    .header-background {
+        background-image: url("{{ my_site_data.header_image.url }}");
+    }
+    </style>
+{% endblock extra_css %}
+
 {% block content %}
 
-<section class='bg-center bg-no-repeat bg-[url("{% static 'img/wave-kalen.png' %}")] bg-transparent bg-blend-multiply'>
+<section class='header-background bg-center bg-no-repeat bg-transparent bg-blend-multiply'>
     <div class="px-4 mx-auto max-w-screen-xl max-h-screen-xl text-center py-24 lg:py-56">
         <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl">{{ my_site_data.header_title|title }}</h1>
         <p class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48">{{ my_site_data.header_message }}</p>
@@ -20,5 +28,6 @@
         </div>
     </div>
 </section>
+    <img src="{{ my_site_data.header_image.url }}" alt="hello">
 
 {% endblock content %}
