--- a/templates/main_app/landing.html
+++ b/templates/main_app/landing.html
@@ -2,9 +2,9 @@
 {% load static %}
 
 {% block extra_css %}
-    <style type="text/css">
+    <style>
     .header-background {
-        background-image: url("{{ my_site_data.header_image.url }}");
+        background-image: url("https://flowbite.s3.amazonaws.com/docs/jumbotron/conference.jpg");
     }
     </style>
 {% endblock extra_css %}
@@ -16,18 +16,21 @@
         <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl">{{ my_site_data.header_title|title }}</h1>
         <p class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48">{{ my_site_data.header_message }}</p>
         <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
-            <a href="#" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
-                Get started
+            <a target="_blank" href="{% url 'feed' %}" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-orange-500 hover:bg-orange-600 focus:ring-4 focus:ring-orange-300">
+                Feed
                 <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                 </svg>
             </a>
-            <a href="#" class="inline-flex justify-center hover:text-gray-900 items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg border border-white hover:bg-gray-100 focus:ring-4 focus:ring-gray-400">
-                Learn more
-            </a>
+
         </div>
     </div>
 </section>
-    <img src="{{ my_site_data.header_image.url }}" alt="hello">
+
+<section>
+<div class="px-10 py-10">
+    <a href="mailto:{{ my_site_data.email }}?subject=Drawing Invoice Request" class="font-medium text-blue-600 dark:text-blue-500 hover:underline" target="_blank">Request for an invoice</a>
+</div>
+</section>
 
 {% endblock content %}
