--- a/templates/main_app/feed_post_list.html
+++ b/templates/main_app/feed_post_list.html
@@ -1,28 +1,20 @@
 {% load static %}
+
+{% for post in posts %}
 <!--  Post  -->
-<div class=" rounded overflow-hidden border w-full lg:w-6/12 md:w-6/12 bg-white mx-3 md:mx-0 lg:mx-0">
-    <div class="w-full flex justify-between p-3">
-        <div class="flex">
-            <div class="rounded-full h-8 w-8 bg-gray-500 flex items-center justify-center overflow-hidden">
-                <img src="{% static 'favicons/android-chrome-192x192.png' %}" alt="profile picture">
-            </div>
-            {#<span class="pt-1 ml-2 font-bold text-sm">kalen</span>#}
-        </div>
-        <span class="px-2 hover:bg-gray-300 cursor-pointer rounded">
-            <i class="fas fa-ellipsis-h pt-2 text-lg"></i>
-        </span>
-    </div>
-    <img class="w-full bg-cover" src="https://3.bp.blogspot.com/-Chu20FDi9Ek/WoOD-ehQ29I/AAAAAAAAK7U/mc4CAiTYOY8VzOFzBKdR52aLRiyjqu0MwCLcBGAs/s1600/DSC04596%2B%25282%2529.JPG" alt="feed image">
+<div class="overflow-hidden w-full lg:w-6/12 md:w-6/12 bg-white mx-0 md:mx-0 lg:mx-0">
+    <img class="w-full bg-cover" src="{{ post.picture.url }}" alt="feed image">
     <div class="px-3 pb-2">
         <div class="pt-2">
             <i class="far fa-heart cursor-pointer"></i>
-            <span class="text-sm text-gray-400 font-medium">12 days ago</span>
+            <span class="text-sm text-gray-400 font-medium">{{ post.created }}</span>
         </div>
         <div class="pt-1">
             <div class="mb-2 text-sm">
-                The post comment goes here, Just lorem ipsum for now.
+                {{ post.description }}
             </div>
         </div>
     </div>
 </div>
 <!-- end of post -->
+{% endfor %}
