feed detail view & url

--- a/templates/main_app/landing.html
+++ b/templates/main_app/landing.html
@@ -10,16 +10,15 @@
 {% endblock extra_css %}
 
 {% block content %}
-
-<section class='header-background bg-center bg-no-repeat bg-transparent bg-blend-multiply'>
-    <div class="px-4 mx-auto max-w-screen-xl max-h-screen-xl text-center py-24 lg:py-56">
+<section class='w-full header-background bg-center bg-cover bg-no-repeat bg-transparent bg-blend-multiply'>
+    <div class="w-full max-h-screen-xl text-center py-24 lg:py-56 backdrop-blur-sm px-4">
         <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl">{{ my_site_data.header_title|title }}</h1>
         <p class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48">{{ my_site_data.header_message }}</p>
         <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
             <a href="{% url 'feed' %}" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-orange-500 hover:bg-orange-600 focus:ring-4 focus:ring-orange-300">
                 Feed
                 <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"></path>
                 </svg>
             </a>
         </div>
