--- a/templates/base.html
+++ b/templates/base.html
@@ -51,8 +51,8 @@
     <nav class="bg-white border-gray-200 {% if page_title == "landing" %}sticky top-0{% endif %}">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-center mx-auto p-2">
             <div class="flex items-center md:order-2">
-                <a href="{% url 'landing' %}" class="{% if page_title == "landing_page" %}underline nav-underline-offset font-bold{% endif %} border-r border-r-[#fb923c] block py-2 pl-3 pr-4 text-[#fb923c] hover:bg-gray-100 hover:bg-transparent hover:text-[#fef08a]">Home</a>
-                <a href="{% url 'feed' %}" class="{% if page_title == "feed_page" %}underline nav-underline-offset font-bold{% endif %} block py-2 pl-3 pr-4 text-[#fb923c] hover:bg-gray-100 hover:bg-transparent hover:text-[#fef08a]">Feed</a>
+                <a href="{% url 'landing' %}" class="{% if page_title == "landing_page" %}underline nav-underline-offset decoration-4 font-bold{% endif %} border-r border-r-[#fb923c] block py-2 pl-3 pr-4 text-[#fb923c] hover:bg-gray-100 hover:bg-transparent hover:text-[#fef08a]">Home</a>
+                <a href="{% url 'feed' %}" class="{% if page_title == "feed_page" %}underline nav-underline-offset decoration-4 font-bold{% endif %} block py-2 pl-3 pr-4 text-[#fb923c] hover:bg-gray-100 hover:bg-transparent hover:text-[#fef08a]">Feed</a>
             </div>
         </div>
     </nav>
