--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-gray-50 shadow">
+<footer class="bg-white shadow">
     <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
         <div class="md:flex md:justify-between">
           <div class="mb-6 md:mb-0">
@@ -9,17 +9,39 @@
           <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
               <div></div>
               <div></div>
-{#              <div>#}
-{#                  <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Quick Links</h2>#}
-{#                  <ul class="text-gray-600 dark:text-gray-400 font-medium">#}
-{#                      <li class="mb-4">#}
-{#                          <a href="#" class="hover:underline">Privacy Policy</a>#}
-{#                      </li>#}
-{#                      <li>#}
-{#                          <a href="#" class="hover:underline">Terms &amp; Conditions</a>#}
-{#                      </li>#}
-{#                  </ul>#}
-{#              </div>#}
+              <div>
+                <button type="button" data-modal-target="tc-modal" data-modal-toggle="tc-modal" class="text-gray-900 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
+                  <svg aria-hidden="true" class="w-4 h-4 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1"></path></svg>
+                  Terms & Conditions
+                </button>
+                <!-- Main modal -->
+                <div id="tc-modal" tabindex="-1" aria-hidden="true" class="fixed top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full">
+                    <div class="relative w-full max-w-md max-h-full">
+                        <!-- Modal content -->
+                        <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+                            <button type="button" class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ml-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="tc-modal">
+                                <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+                                </svg>
+                                <span class="sr-only">Close modal</span>
+                            </button>
+                            <!-- Modal header -->
+                            <div class="px-6 py-4 border-b rounded-t dark:border-gray-600">
+                                <h3 class="text-base font-semibold text-gray-900 lg:text-xl dark:text-white">
+                                    Kalen Art Terms And Conditions
+                                </h3>
+                            </div>
+                            <!-- Modal body -->
+                            <div class="p-6">
+                                <p class="text-gray-800 pt-1 pb-5">
+                                    {{ my_site_data.terms_and_conditions }}
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+              </div>
           </div>
       </div>
       <hr class="my-6 border-gray-200 sm:mx-auto lg:my-8" />
