lazy load images

--- a/templates/main_app/feed_post_grid.html
+++ b/templates/main_app/feed_post_grid.html
@@ -1,5 +1,5 @@
 {% for post in posts %}
     <a href="{{ post.picture.url }}" data-lightbox="my_feeds" data-title="{{ post.description }}">
-        <img class="gallery h-[400px] max-w-full" src="{{ post.picture.url }}" alt="">
+        <img loading="lazy" class="gallery h-[400px] max-w-full" src="{{ post.picture.url }}" alt="">
     </a>
 {% endfor %}
